@@ -26,7 +26,7 @@ teardown() {
   save_home_on_failure
 
   delete_all_collections
-  solr stop -all >/dev/null 2>&1
+  SOLR_STOP_WAIT=1 solr stop -all >/dev/null 2>&1
 }
 
 @test "SQL Module" {
@@ -37,6 +37,27 @@ teardown() {
   assert_output --partial '"EOF":true'
   assert_output --partial '"RESPONSE_TIME":'
   refute_output --partial '"EXCEPTION"'
+}
+
+@test "Hadoop-Auth Module: KerberosPlugin Classloading" {
+  # Write a security.json that uses the KerberosPlugin
+  local security_json="${BATS_TEST_TMPDIR}/kerberos-security.json"
+  echo '{"authentication": {"class": "solr.KerberosPlugin"}}' > "${security_json}"
+
+  # Start Solr
+  export SOLR_MODULES=hadoop-auth
+  solr start -c \
+    -Dsolr.kerberos.principal=test \
+    -Dsolr.kerberos.keytab=test \
+    -Dsolr.kerberos.cookie.domain=test
+
+  # Upload the custom security.json and wait for Solr to try to load it
+  solr zk cp "${security_json}" zk:security.json -z localhost:9983
+  sleep 1
+
+  run cat "${SOLR_LOGS_DIR}/solr.log"
+  assert_output --partial "Initializing authentication plugin: solr.KerberosPlugin"
+  refute_output --partial "java.lang.ClassNotFoundException"
 }
 
 @test "icu collation in analysis-extras module" {
